bug fix for overflowing text container

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -36,6 +36,7 @@ body {
     font-size: 24px;
     font-family: 'Source Sans Pro', sans-serif;
     margin-top: 5em;
+    word-break: break-word;
 }
 
 
